--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				   			<div class="row">
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
-					   					<div class="desc"><font color="white">
+					   					<div class="desc" style="text-color: 'white';"><font color="white">
 						   					<h1>Hi! <br>I'm Praman</h1></font>
 												<p><a class="btn btn-primary btn-learn" onclick="window.location.href='https://github.com/Praman1997/Praman1997.github.io/raw/master/Praman_Kasliwal_resume.pdf'" Download="Praman_Kasliwal_resume.pdf">Download CV <i class="icon-download4"></i></a></p>
 											</div>
