--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1><font color="white">I am a Penetration Tester</font></h1>
+						   					<h1><font color="white">I am a Penetration Tester, Programmer, and much more...</font></h1>
 											</div>
 					   				</div>
 					   			</div>
