--- a/index.html
+++ b/index.html
@@ -372,6 +372,18 @@ I have a keen interest in learning new skills and languages. Programming and pen
 									      <div class="panel-body">
 									        <div class="row">
 										     		<div class="col-md-6">
+										     			<p>2019 - 2022</p>
+										     		</div>
+										     		<div class="col-md-6">
+										     			<p>I am currently pursuing my Bachelors in Computer Science Engineering with specialization in <strong>Information Security and Cloud Technology</strong> from <a href="https://www.poornima.edu.in/" target="_blank"> Poornima University, Jaipur</a>.</p>
+										     		</div>
+										     	</div>
+									      </div>
+									    </div>
+									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+									      <div class="panel-body">
+									        <div class="row">
+										     		<div class="col-md-6">
 										     			<p>2016 - 2020(Expected)</p>
 										     		</div>
 										     		<div class="col-md-6">
