--- a/index.html
+++ b/index.html
@@ -364,10 +364,10 @@ I have a keen interest in learning new skills and languages. Programming and pen
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Bachelors Degree of Information Security and Cloud Technology
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">CEH (Certified Ethical Hacker), by EC-Council
 									            </a>
 									        </h4>
-									    </div>
+										</div>
 									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									      <div class="panel-body">
 									        <div class="row">
@@ -375,11 +375,20 @@ I have a keen interest in learning new skills and languages. Programming and pen
 										     			<p>2019 - 2022</p>
 										     		</div>
 										     		<div class="col-md-6">
-										     			<p>I am currently pursuing my Bachelors in Computer Science Engineering with specialization in <strong>Information Security and Cloud Technology</strong> from <a href="https://www.poornima.edu.in/" target="_blank"> Poornima University, Jaipur</a>.</p>
+													<img src="CEA-logo.gif" align="left">
+										     			<p>I have recently completed a Certification course, CEH (Certified Ethical Hacker), by EC-Council. You can review my certificate by the certificate number <strong>ECC3954621807</strong></a>.</p>
 										     		</div>
 										     	</div>
 									      </div>
 									    </div>
+									</div>
+									<div class="panel panel-default">
+									    <div class="panel-heading" role="tab" id="headingOne">
+									        <h4 class="panel-title">
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Bachelors Degree of Information Security and Cloud Technology
+									            </a>
+									        </h4>
+										</div>
 									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 									      <div class="panel-body">
 									        <div class="row">
