--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ I have a keen interest in learning new skills and languages. Programming and pen
 										     			<p>2019 - 2022</p>
 										     		</div>
 										     		<div class="col-md-6">
-													<img src="CEA-logo.gif" align="left">
+													<img src="CEA-logo.gif" align="left" size="20%">
 										     			<p>I have recently completed a Certification course, CEH (Certified Ethical Hacker), by EC-Council. You can review my certificate by the certificate number <strong>ECC3954621807</strong></a>.</p>
 										     		</div>
 										     	</div>
@@ -385,7 +385,7 @@ I have a keen interest in learning new skills and languages. Programming and pen
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Bachelors Degree of Information Security and Cloud Technology
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Bachelors Degree of Information Security and Cloud Technology
 									            </a>
 									        </h4>
 										</div>
