--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ I have a keen interest in learning new skills and languages. Programming and pen
 										     			<p>2019 - 2022</p>
 										     		</div>
 										     		<div class="col-md-6">
-													<img src="CEA-logo.gif" align="left" size="20%">
+													<img src="CEA-logo.gif" align="left" height="20%" width="20%">
 										     			<p>I have recently completed a Certification course, CEH (Certified Ethical Hacker), by EC-Council. You can review my certificate by the certificate number <strong>ECC3954621807</strong></a>.</p>
 										     		</div>
 										     	</div>
