--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@ I have a keen interest in learning new skills and languages. Programming and pen
 									        <div class="row">
 										     		<div class="col-md-6">
 										     			<p>2019 - 2022</p>
+													<img src="CEA-logo.gif" align="left" height="20%" width="20%">
 										     		</div>
 										     		<div class="col-md-6">
-													<img src="CEA-logo.gif" align="left" height="20%" width="20%">
 										     			<p>I have recently completed a Certification course, CEH (Certified Ethical Hacker), by EC-Council. You can review my certificate by the certificate number <strong>ECC3954621807</strong></a>.</p>
 										     		</div>
 										     	</div>
@@ -383,13 +383,13 @@ I have a keen interest in learning new skills and languages. Programming and pen
 									    </div>
 									</div>
 									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingOne">
+									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Bachelors Degree of Information Security and Cloud Technology
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelors Degree of Information Security and Cloud Technology
 									            </a>
 									        </h4>
 										</div>
-									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+									    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									      <div class="panel-body">
 									        <div class="row">
 										     		<div class="col-md-6">
@@ -403,13 +403,13 @@ I have a keen interest in learning new skills and languages. Programming and pen
 									    </div>
 									</div>
 									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingTwo">
+									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Class 12<sup>th</sup>
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Class 12<sup>th</sup>
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
 														<div class="row">
 														<div class="col-md-6">
