--- a/index.html
+++ b/index.html
@@ -372,11 +372,27 @@ I have a keen interest in learning new skills and languages. Programming and pen
 									      <div class="panel-body">
 									        <div class="row">
 										     		<div class="col-md-6">
-										     			<p>2019 - 2022</p>
-													<img src="CEA-logo.gif" align="left" height="20%" width="20%">
+										     			<p>February, 2019 - February, 2022</p>
+													<img src="CEA-logo.gif" align="left" height="30%" width="30%">
 										     		</div>
 										     		<div class="col-md-6">
-										     			<p>I have recently completed a Certification course, CEH (Certified Ethical Hacker), by EC-Council. You can review my certificate by the certificate number <strong>ECC3954621807</strong></a>.</p>
+										     			<p>I have recently completed a Certification course, CEH (Certified Ethical Hacker), by EC-Council. You can review my certificate... <form action="https://aspen.eccouncil.org/Verify" target="_blank" method="post" _lpchecked="1">
+                <div class="row">
+                    <div class="form-group col-md-4" hidden="true">
+                        <input maxlength="75" class="form-control disable" id="txtname" name="txtname" value="Praman Kasliwal" type="hidden">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="form-group col-md-4" hidden="true">
+                        <input maxlength="75" autocomplete="off" class="form-control disable" id="txtcert_number" name="txtcert_number" onkeypress="return Special(event)" value="ECC3954621807" type="hidden">
+                    </div>
+                </div>
+                <div class="row" style="margin:0px;">
+                    <div class="button-group">
+                        <input id="lnkSubmit" onclick="return Validations()" value="Here" type="submit">
+                    </div>
+                </div>
+</form>.</a></p>
 										     		</div>
 										     	</div>
 									      </div>
@@ -385,11 +401,11 @@ I have a keen interest in learning new skills and languages. Programming and pen
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelors Degree of Information Security and Cloud Technology
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Bachelors Degree of Information Security and Cloud Technology
 									            </a>
 									        </h4>
 										</div>
-									    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									      <div class="panel-body">
 									        <div class="row">
 										     		<div class="col-md-6">
@@ -409,7 +425,8 @@ I have a keen interest in learning new skills and languages. Programming and pen
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+
+									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
 														<div class="row">
 														<div class="col-md-6">
