--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ I have a keen interest in learning new skills and languages. Programming and pen
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
 									<p>Follow Me on <a href="https://twitter.com/pramankasliwal/"><i class="icon-twitter2">Twitter</i></a></p>
-									<p>Connect with me on <a href="https://www.linkedin.com/in/praman-kasliwal-12892b146"><i class="icon-linkedin2">LinkedIn</i></a></p>
+									<p>Connect with me on <a href="https://www.linkedin.com/in/pramankasliwal"><i class="icon-linkedin2">LinkedIn</i></a></p>
 									<p>Look me up @ <a href="https://github.com/praman1997/"><i class="icon-github">GitHub</i></a></p>
 									<p> Friend me on <a href="https://www.facebook.com/kasliwal.praman"><i class="icon-facebook2">Facebook</i></a></a>
 								</div>
