Earlier code did not work

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                                \______/                                                                                                                                   
 -->
 <html>
-	<body onload="window.location.replace('https://PramanKasliwal.github.io/')">
+	<body>
+        <script>
+            window.location.replace('https://PramanKasliwal.github.io/')
+        </script>
 	</body>
 </html>
